Left align the count message. Issue: #908

--- a/static/css/modal.less
+++ b/static/css/modal.less
@@ -28,5 +28,9 @@
       font-weight: bold;
       color: @error-color;
     }
+    .left {
+      float: left;
+      padding: 5px 0;
+    }
   }
 }
